Bug 744543 - LayerManagerOGL doesn't build on Linux/clang. r=bjacob